<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/list_border">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView android:id="@+id/wager_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20dp"
                android:text="@string/person_name"
                android:paddingLeft="5dp"
                android:paddingTop="10dp"/>
            <TextView android:id="@+id/display_start_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:text="@string/start_date"
                android:paddingLeft="5dp"/>
            <TextView android:id="@+id/charge_for_day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:text="@string/rate_for_the_day"
                android:paddingLeft="5dp"/>
        </LinearLayout>
        <CheckBox android:id="@+id/current_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/present_text"/>
    </LinearLayout>
</LinearLayout>