<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_msg"
            />
        <EditText android:id="@+id/profile_wager_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="13"
            android:hint="@string/wager_name"
            android:inputType="textCapWords"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:imeOptions="actionNext"/>
        <EditText android:id="@+id/wager_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="13"
            android:hint="@string/wager_rate"
            android:inputType="numberDecimal"
            android:layout_below="@id/profile_wager_name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:imeOptions="actionNext"/>
        <LinearLayout android:id="@+id/start_date_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="25dp"
            android:layout_below="@id/wager_rate"
            android:layout_centerHorizontal="true">
            <EditText android:id="@+id/profile_start_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="11"
                android:hint="@string/start_date"
                android:inputType="date"
                android:imeOptions="actionNext"/>
            <Button android:id="@+id/profile_start_date_btn"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:background="@drawable/date_range"/>
        </LinearLayout>
        <TextView android:id="@+id/days_of_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_below="@id/start_date_layout"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="25dp"
            android:text="@string/days_of_week"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="25dp"
            android:layout_below="@id/days_of_week"
            android:gravity="center"
            android:layout_alignParentLeft="true">
            <ToggleButton android:id="@+id/sunday"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:textOn="S"
                android:textOff="S"
                android:checked="true"/>
            <ToggleButton android:id="@+id/monday"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:textOn="M"
                android:textOff="M"
                android:checked="true"/>
            <ToggleButton android:id="@+id/tuesday"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:textOn="T"
                android:textOff="T"
                android:checked="true"/>
            <ToggleButton android:id="@+id/wednesday"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:textOn="W"
                android:textOff="W"
                android:checked="true"/>
            <ToggleButton android:id="@+id/thursday"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:textOn="T"
                android:textOff="T"
                android:checked="true"/>
            <ToggleButton android:id="@+id/friday"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:textOn="F"
                android:textOff="F"
                android:checked="true"/>
            <ToggleButton android:id="@+id/saturday"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:textOn="S"
                android:textOff="S"
                android:checked="true"/>
        </LinearLayout>
        <Button android:id="@+id/save_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_button"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            android:layout_marginTop="25dp"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>
</LinearLayout>



