<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
        <LinearLayout android:id="@+id/date_and_attendance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Switch
                android:id="@+id/date_select_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:layout_marginRight="2dp"
                android:text="@string/date_range_msg"/>
            <CheckBox android:id="@+id/day_attendance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="Present?"/>
            <CheckBox android:id="@+id/range_attendance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:visibility="gone"
                android:text="Present for range of dates?"/>
        </LinearLayout>

        <com.prolificinteractive.materialcalendarview.MaterialCalendarView
            android:id="@+id/calendarView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:mcv_showOtherDates="all"
            app:mcv_selectionColor="#00F"
            android:padding="2dp"
            android:layout_below="@id/date_and_attendance"/>
        <LinearLayout android:id="@+id/amount_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/calendarView"
            android:paddingTop="7dp"
            android:gravity="left">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amount_for_month_label"/>
            <TextView android:id="@+id/due_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="30"
                android:textSize="20dp"
                android:paddingLeft="10dp"/>
        </LinearLayout>
        <LinearLayout android:id="@+id/rate_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/amount_section"
            android:layout_marginTop="4dp"
            android:gravity="left">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rate_for_the_day"/>
            <EditText android:id="@+id/edit_rate_of_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="10"
                android:ems="4"
                android:enabled="false"
                android:textSize="20dp"
                android:inputType="numberDecimal"
                android:paddingLeft="10dp"/>
            <Button android:id="@+id/edit_start"
                android:layout_width="35dp"
                android:layout_height="30dp"
                android:visibility="visible"
                android:background="@drawable/edit_mode"/>
            <Button android:id="@+id/edit_done"
                android:layout_width="35dp"
                android:layout_height="30dp"
                android:visibility="gone"
                android:background="@drawable/done_black"/>
            <Button android:id="@+id/edit_cancel"
                android:layout_width="35dp"
                android:layout_height="30dp"
                android:visibility="gone"
                android:background="@drawable/clear_black"/>
        </LinearLayout>

        <Button android:id="@+id/save_changes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Save"
            android:visibility="gone"
            android:background="@color/colorPrimary"
            android:layout_below="@id/rate_section"/>
    </RelativeLayout>
</ScrollView>
